<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="i0akinsec.wordpress.com.practicafragments.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txtvTituloPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_titulo_principal"
        android:layout_margin="@dimen/margen_titulo_principal"
        android:text="@string/areas_y_perimetros"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_below="@+id/txtvTituloPrincipal"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_areas"
            android:layout_width="@dimen/tam_btn_areas"
            android:padding="@dimen/padding_controles"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tam_texto"
            android:onClick="btnAreasClick"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/fab_margin"
            android:layout_gravity="end"
            android:text="@string/btn_areas" />

        <Button
            android:id="@+id/btn_series"
            android:text="@string/btn_series"
            android:textSize="@dimen/tam_texto"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="btnSeriesClick"
            android:padding="@dimen/padding_controles"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:textAlignment="textStart"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_contacto"
            android:text="@string/btn_contacto"
            android:textSize="@dimen/tam_texto"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="btnContactoClick"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:padding="@dimen/padding_controles"
            android:layout_width="@dimen/tam_btn_areas"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
